xscode banner and button to open the chat added

--- a/packages/docs/.markdownlintrc
+++ b/packages/docs/.markdownlintrc
@@ -47,7 +47,8 @@
       "vuetify-comparison",
       "vuetify-projects",
       "why-vuetify-cards",
-      "wireframe-examples"
+      "wireframe-examples",
+      "xscode-banner"
     ]
   },
   "MD036": false
